--- a/style.css
+++ b/style.css
@@ -153,11 +153,11 @@ img {
     display: none;
 }
 .nav__logo img {
-    width: 12rem;
+    width: 9rem;
 }
 .nav__link {
     color: var(--color-blue);
-    font-size: var(--normal-font-size);
+    font-size: var(--h3-font-size);
     font-weight: var(--font-bold);
     letter-spacing: 2px;
     transition: color 0.4s;
@@ -177,7 +177,7 @@ img {
     position: relative;
     overflow: hidden;
     margin: 6rem 0 7rem;
-    height: 75vh;
+    height: auto;  /*remove */
 }
 .banner.section {
     padding: 0;
@@ -201,7 +201,7 @@ img {
 /* Imagen del banner */
 .banner-img {
     width: 95%;
-    height: 75vh;
+    height: 78vh;
     margin: auto;
     border-radius: 30px;
     display: block;
@@ -210,16 +210,14 @@ img {
 
 /* Contenido del banner */
 .banner-content {
-    width: 100%;
+    width: 90%;
     text-align: center;
     position: absolute;
     top: 0;
-    left: 58%;
     color: var(--white-color);
-    max-width: 30%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
 }
 .banner-title {
@@ -473,37 +471,16 @@ img {
 .fs-title{
     font-size: 30px !important;
 }
-.container-card {
-    width: 80%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-}
 .container-cards{
-    max-width: 900px;
+    max-width: 899px;
     width: 100%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 2rem;
+    gap: 1.5rem;
     margin-bottom: 5rem;
     object-fit: cover;
-}
-.sect-card {
-    background: #fff;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 6px 6px 0px 0px rgba(0, 0, 0, 0.08);
-    transition: box-shadow 0.9s ease;
-    cursor: pointer;
-    padding: 2rem;
-    width: 23%;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
 }
 .sect-cards {
     background: #fff;
@@ -518,7 +495,7 @@ img {
     flex-direction: column;
     gap: 12px;
 }
-.sect-card:hover{
+.sect-cards:hover{
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.08);
 }
 .sect-icon i{
@@ -857,6 +834,7 @@ footer{
     justify-content: left;
     flex-wrap: wrap;
     max-width: 900px;
+    margin: auto;
 }
 .copyright{
     background-color: #014F9B;
@@ -1069,14 +1047,26 @@ footer{
     }
 
 }
+@media (max-width: 500px) {
+    .sect-cards{
+        width: 40% !important;
+        padding: 2rem 0 2rem 1.5rem;
+    }
+}
 
 @media (max-width: 600px) {
+    .nav{
+        height: 4rem;
+    }
+    .nav__logo img{
+        width: 5rem;
+    }
     .section{
         padding-block: 3rem;
     }
     /* BANNER */
     .banner{
-        margin: 6rem 0;
+        margin: 4rem 0 3rem;
         height: auto;
     }
     .banner-img{
@@ -1091,7 +1081,11 @@ footer{
         height: 500px;
     }
     .banner-title{
-        font-size: 40px;
+        font-size: 35px;
+    }
+    .banner-content{
+        width: 100%;
+        justify-content: center;
     }
 
     /* ABOUT US */
@@ -1099,16 +1093,17 @@ footer{
         width: 100%;
     }
     .about-us{
-        padding: 60px 15px;
+        padding: 30px 15px;
     }
     .about-us-image img{
         height: 350px;
+        object-fit: cover;
     }
     
     /* Service */
 
     .title-heading h2{
-        font-size: 35px;
+        font-size: 30px;
         line-height: 38px;
     }
     .sect-card {
@@ -1123,8 +1118,8 @@ footer{
         align-self: center;
     }
     .fs-title{
-        font-size: 25px !important;
-        line-height: 25px !important;
+        font-size: 30px !important;
+        line-height: 30px !important;
         width: 80%;
         margin: 0 auto;
     }
@@ -1162,9 +1157,17 @@ footer{
     .testimonials{
         padding: 0;
     }
+    .container-testimonials h2{
+        font-size: 30px;
+        line-height: 38px;
+        margin-bottom: 1rem;
+    }
 
     /* Question */
 
+    .container-inf-quest{
+        margin: 2rem 0 2rem;
+    }
     .container-inf-quest h2 {
         font-size: 1.8rem;
     }
@@ -1195,12 +1198,33 @@ footer{
     .carousel-wrapper::after {
         width: 50px;
     }
+    .container-cards{
+        gap: 0.8rem;
+        margin: 0rem 0 3rem;
+    }
     .sect-cards{
-        width: 55%;
+        width: 28%;
+        padding: 0.8rem 0 1.5rem 1rem;
+    }
+    .sect-icon i{
+        font-size: 30px;
     }
     .cert-containter img{
-        width: 40%;
+        width: 30%;
     }
+    .cert-containter img:nth-child(5){
+        height: 5rem !important;
+    }
+    .carousel-track{
+        gap: 16px;
+    }
+    /* Certificados */
+
+    .p-title-nt{
+        margin: 20px 10px;
+        font-size: 16px;
+    }
+
 
     /* Footer */
 
@@ -1219,9 +1243,20 @@ footer{
     .ft-down p{
         text-align: center;
         padding-bottom: 10px;
+        width: 70%;
     }
     .footer-section{
         width: 100%;
+    }
+    .footer-main{
+        padding: 40px;
+        gap: 1.5rem;
+    }
+    .social-links{
+        margin-top: 0;
+    }
+    .ft-down a{
+        font-size: 12px;
     }
 }
 
@@ -1300,6 +1335,7 @@ footer{
     }
     .sect-cards{
         width: 23%;
+        padding: 2rem 1rem 2rem 1.5rem;
     }
     .cert-containter img{
         height: auto !important;
