Avance de banners

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ img {
     margin: auto;
     border-radius: 30px;
     display: block;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 /* Contenido del banner */
