--- a/style.css
+++ b/style.css
@@ -235,16 +235,26 @@ img {
     border-radius: 5px;
 }
 .hero-contact{
-    background-color: #002855;
-    padding: 10px;
-    color: white;
+    position: absolute;
+    width: 17%;
+    top: 75%;
+    right: 2.6%;
     display: flex;
+    flex-direction: column;
     gap: 5px;
 }
-.inf-hero{
-
+.first-column-bnr, .second-column-bnr{
+    padding: 10px 0;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: #002855;
 }
-
+.title-hero i{
+    font-size: 30px;
+}
 
 /* ===== BOTONES DE NAVEGACIÓN ===== */
 .prev, .next {
@@ -549,7 +559,7 @@ img {
     position: relative;
     width: 100%;
     height: 60vh;
-    background: url("img/contact-img.jpg") center/cover no-repeat;
+    background: url("img/mapa-peru.jpg") center/cover no-repeat;
     background-attachment: fixed;
     align-items: center;
     display: flex;
@@ -570,21 +580,27 @@ img {
     padding: 0 1rem;
 }
 .banner-contact h2 {
-    font-size: clamp(1.9rem, 6vw, 4rem);
+    font-size: 3rem;
     font-weight: 800;
-    color: var(--color-yellow, #f4b400);
+    color: var(--color-yellow);
     line-height: 52px;
     margin-bottom: 2rem;
     font-family: "Racing Sans One", sans-serif;
     letter-spacing: 3px;
+    line-height: 40px;
+}
+.banner-contact h2 > strong{
+    font-size: 1.5rem;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .btn-contact {
     display: inline-flex;
     align-items: center;
     gap: 8px;
     background: transparent;
-    color: var(--white-color);
-    border: 2px solid #fff;
+    color: var(--color-yellow);
+    border: 2px solid var(--color-yellow);
     border-radius: 30px;
     padding: 10px 25px;
     font-weight: 600;
@@ -629,8 +645,8 @@ img {
 .testimonial-card {
     position: relative;
     background: #fff;
-    border-radius: 15px;
-    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 30px;
+    border: 2px solid var(--color-blue);
     padding: 2rem;
     width: 45%;
     text-align: left;
@@ -707,7 +723,7 @@ img {
 .container-quest {
     width: 100%;
     height: 100%;
-    background-image: url(img/product-img.png);
+    background-image: url(img/product-imgs.png);
     background-size: 100% 100%;
     background-position: bottom left;
     background-repeat: no-repeat;
@@ -827,6 +843,44 @@ img {
     height: auto;
 }
 
+/* ===============FRANCHISE=================== */
+.banner-franchise{
+    position: relative;
+}
+.img-portada{
+    width: 100%;
+    height: 420px;
+    background-image: url("img/franchise.png");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img-portada-responsive{
+    display: none;
+}
+.inf-bnr{
+    position: absolute;
+    width: 30%;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    line-height: 28px;
+    font-weight: 400;
+}
+.inf-bnr p{
+    font-size: 20px;
+}
+.inf-bnr p:nth-child(1){
+    font-size: 25px;
+}
+.inf-bnr a > p{
+    background-color: var(--color-blue);
+    color: white;
+    padding: 10px;
+    margin-top: 8px;
+    margin-bottom: 5px;
+}
 
 /* ===============FOOTER=================== */
 
@@ -839,19 +893,18 @@ footer{
     margin: auto;
 }
 .footer-main{
-    padding: 60px 40px;
+    padding: 60px 0;
     display: flex;
     gap: 40px;
-    justify-content: left;
+    justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 900px;
     margin: auto;
 }
 .copyright{
     background-color: #014F9B;
 }
 .footer-section{
-    width: 30%;
+    width: 50%;
 }
 .social-links{
     display: flex;
@@ -959,12 +1012,16 @@ footer{
     margin: 0 auto;
     padding: 20px 40px;
 }
+.footer-down{
+    display: flex;
+    justify-content: center;
+}
 
 /* ============WSP============= */
 
 .button__floating {
     z-index: var(--z-fixed);
-    bottom: 2rem;
+    bottom: 1rem;
     padding: 8px;
     position: fixed;
     border-radius: 0.5rem;
@@ -982,7 +1039,7 @@ footer{
 .scrollup {
     position: fixed;
     right: 1rem;
-    bottom: 6rem;
+    bottom: 5rem;
     transform: translateY(4rem);
     transition: opacity 0.4s ease, transform 0.4s ease;
     z-index: var(--z-tooltip);
@@ -1002,6 +1059,27 @@ footer{
 .show-scroll {
     opacity: 1;
     transform: translateY(0);
+}
+
+/* Map */
+.mapa-responsive {
+    position: relative;
+    width: 100%;
+    padding-top: 42%;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.mapa-responsive iframe {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 600px;
+    border: 0;
+}
+.mapa-responsive {
+    max-width: 1300px;
+    margin: auto;
 }
 
 @media (max-width: 768px) {
@@ -1098,6 +1176,9 @@ footer{
         width: 100%;
         justify-content: center;
     }
+    .banner-pd{
+        margin-top: 4rem !important;
+    }
 
     /* ABOUT US */
     .about-us-image, .about-us-content{
@@ -1159,8 +1240,19 @@ footer{
 
     /* Contact */
     .banner-contact h2{
-        line-height: 30px;
+        line-height: 47px;
         letter-spacing: 0px;
+    }
+    .contact-section{
+        padding: 60px 20px !important;
+    }
+    .mapa-responsive iframe{
+        height: 50vh;
+    }
+    .mapa-responsive{
+        max-width: 90%;
+        height: 50vh;
+        margin-bottom: 4rem;
     }
 
     /* Testimonials */
@@ -1236,6 +1328,48 @@ footer{
         font-size: 16px;
     }
 
+    /* Contenido del banner */
+
+    .hero-contact{
+        width: 50%;
+        top: 75%;
+    }
+    .hero-contact .inf-hero p{
+        font-size: 12px;
+    }
+    .title-hero i{
+        font-size: 25px;
+    }
+
+    /* FRANCHISE */
+
+    .img-portada{
+        display: none;
+    }
+    .img-portada-responsive{
+        display: flex;
+        width: 100%;
+        height: 600px;
+        background-image: url("img/franchise-responsive.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .inf-bnr{
+        width: 80%;
+        top: 76%;
+        left: 50%;
+        line-height: 20px;
+    }
+    .inf-bnr p:nth-child(1){
+        font-size: 20px;
+    }
+    .inf-bnr a > p{
+        font-size: 15px;
+    }
+    .inf-bnr p{
+        font-size: 15px;
+    }
 
     /* Footer */
 
@@ -1268,6 +1402,10 @@ footer{
     }
     .ft-down a{
         font-size: 12px;
+    }
+    .footer-down{
+        flex-direction: column;
+        gap: 30px;
     }
 }
 
